--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#work2"><h1><span>Work2</span></h1></a>
+						<li>Work2 <a href="#work2"><span>Work2</span></a></li>
 						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a> -->
 						<!-- <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
 					</nav>
