--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#work2"><p size="9px">Work2</p></a>
+						<a href="#work3"><p size="9px">Work3</p></a>
 						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a> -->
 						<!-- <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
 					</nav>
@@ -118,7 +119,25 @@
 									</div>
 								</section>
 							</article>
-						
+						<!-- Work3 -->
+							<article id="work3" class="panel">
+								<header>
+									<h2>Work3</h2>
+								</header>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
+								<section>
+									<div class="row">
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+										</div>
+									
+									</div>
+								</section>
+							</article>
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
