--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
 						<!-- Work2 -->
 							<article id="work2" class="panel">
 								<header>
-									<h2>Work2</h2>
+									<h2>Diferencial</h2>
 								</header>
 								<p>
+									Sabemos que times ágeis possuem autonomia e neste contexto quais são os diferenciais que o DM traz ? 
+									Ao ter alguém com visao do todo.
 									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
 									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
 									luctus elit eget interdum.
