--- a/index.html
+++ b/index.html
@@ -108,9 +108,12 @@
 								<p>
 									Sabemos que times ágeis possuem autonomia e neste contexto quais são os diferenciais que o DM traz ? 
 									Ao ter alguém com visao do todo.
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									<p> - Fazer o time rodar</p>
+								<p> - Extrai do time a visão do Risco </p>
+								<p> - Suporta mecanismos de melhoria contínua</p>
+								<p> - Valoriza o time cm reports</p>
+								<p> - Fomenta condições para o time fazer a entrega</p>
+								<p> - Gestão do BackLog técnico</p>
 								</p>
 								<section>
 									<div class="row">
