--- a/index.html
+++ b/index.html
@@ -108,13 +108,14 @@
 								<p>
 									Sabemos que times ágeis possuem autonomia e neste contexto quais são os diferenciais que o DM traz ? 
 									Ao ter alguém com visao do todo.
-									<p> - Fazer o time rodar</p>
-								<p> - Extrai do time a visão do Risco </p>
-								<p> - Suporta mecanismos de melhoria contínua</p>
-								<p> - Valoriza o time cm reports</p>
-								<p> - Fomenta condições para o time fazer a entrega</p>
-								<p> - Gestão do BackLog técnico</p>
 								</p>
+									<p> - Aumenta o estímulo para o time rodar, organiza a dinamica do time</p>
+								<p> - Gestão do BackLog técnico</p>
+								<p> - Extrai do time a visão do Risco </p>
+								<p> - Suporta os mecanismos de melhoria contínua</p>
+								<p> - Valoriza o time com reports</p>
+								<p> - Fomenta condições para o time fazer a entrega</p>
+															
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
