--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 									Sabemos que times ágeis possuem autonomia e neste contexto quais são os diferenciais que o DM traz ? 
 									Ao ter alguém com visao do todo.
 								</p>
-									<p> - Aumenta o estímulo para o time rodar, organiza a dinamica do time</p>
-								<p> - Gestão do BackLog técnico</p>
+								<p> - Aumenta o estímulo para o time rodar, organiza a dinamica do time</p>
+								<p padding: 5px> - Gestão do BackLog técnico</p>
 								<p> - Extrai do time a visão do Risco </p>
 								<p> - Suporta os mecanismos de melhoria contínua</p>
-								<p> - Valoriza o time com reports</p>
+								<p padding: 16px> - Valoriza o time com reports</p>
 								<p> - Fomenta condições para o time fazer a entrega</p>
 															
 								<section>
